@@ -4,6 +4,8 @@ systemd (217-3ubuntu1) UNRELEASED; urgency=medium
     - Create disk/by-partlabel links for mmcblk partitions.
     - Hack to support system-image read-only /etc, and modify files in
       /etc/writable/ instead.
+    - debian/rules: Drop doc dir symlinking. It creates havoc with dpkg
+      upgrades, and we already have the automatic per-file symlinking.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 01 Dec 2014 15:41:09 +0100
 
